load(":build_defs.bzl", "autotools_build", "dist_tarball", "make_bootstrap", "tree_merge")
load(":stage2.bzl", "STAGE_CC", "stage2_autotools_build", "stage2_hermetic_run")

package(default_visibility = ["//visibility:public"])

# ---------------------------------------------------------------------------
# Host-architecture selection for the hermetic prerequisites.
# ---------------------------------------------------------------------------

_NO_MATCH = "this workspace's hermetic prerequisites are only wired for x86_64/aarch64 Linux hosts"

alias(
    name = "busybox",
    actual = select(
        {
            "@platforms//cpu:aarch64": "@busybox_linux_arm64//:bin/busybox.static",
            "@platforms//cpu:x86_64": "@busybox_linux_x64//:bin/busybox.static",
        },
        no_match_error = _NO_MATCH,
    ),
)

alias(
    name = "musl_files",
    actual = select(
        {
            "@platforms//cpu:aarch64": "@musl_toolchain_linux_arm64//:all",
            "@platforms//cpu:x86_64": "@musl_toolchain_linux_x64//:all",
        },
        no_match_error = _NO_MATCH,
    ),
)

alias(
    name = "musl_gcc",
    actual = select(
        {
            "@platforms//cpu:aarch64": "@musl_toolchain_linux_arm64//:bin/gcc",
            "@platforms//cpu:x86_64": "@musl_toolchain_linux_x64//:bin/gcc",
        },
        no_match_error = _NO_MATCH,
    ),
)

# The self-hosted host toolchain targets <arch>-unknown-linux-musl (same
# CPU as the build host, musl libc, fully static).
_MUSL_TARGET = select(
    {
        "@platforms//cpu:aarch64": ["--target=aarch64-unknown-linux-musl"],
        "@platforms//cpu:x86_64": ["--target=x86_64-unknown-linux-musl"],
    },
    no_match_error = _NO_MATCH,
)

# Compiler spellings for stage-2 and final builds: the stage-1/stage-2
# driver binaries carry the full target-triplet prefix.
_STAGE_CC = select(
    {
        "@platforms//cpu:aarch64": [
            "CC=aarch64-unknown-linux-musl-gcc -static",
            "CXX=aarch64-unknown-linux-musl-g++ -static",
        ],
        "@platforms//cpu:x86_64": [
            "CC=x86_64-unknown-linux-musl-gcc -static",
            "CXX=x86_64-unknown-linux-musl-g++ -static",
        ],
    },
    no_match_error = _NO_MATCH,
)

_STAGE_CC_ONLY = select(
    {
        "@platforms//cpu:aarch64": ["CC=aarch64-unknown-linux-musl-gcc -static"],
        "@platforms//cpu:x86_64": ["CC=x86_64-unknown-linux-musl-gcc -static"],
    },
    no_match_error = _NO_MATCH,
)

_STAGE_BUILD_CC = select(
    {
        "@platforms//cpu:aarch64": "aarch64-unknown-linux-musl-gcc -static",
        "@platforms//cpu:x86_64": "x86_64-unknown-linux-musl-gcc -static",
    },
    no_match_error = _NO_MATCH,
)

_STAGE_BUILD_CXX = select(
    {
        "@platforms//cpu:aarch64": "aarch64-unknown-linux-musl-g++ -static",
        "@platforms//cpu:x86_64": "x86_64-unknown-linux-musl-g++ -static",
    },
    no_match_error = _NO_MATCH,
)

_TOOL_SUBDIR = select(
    {
        "@platforms//cpu:aarch64": "aarch64-unknown-linux-musl",
        "@platforms//cpu:x86_64": "x86_64-unknown-linux-musl",
    },
    no_match_error = _NO_MATCH,
)

_SEED_CC = [
    "CC=gcc -static",
    "CXX=g++ -static",
]

_OPT_FLAGS = [
    "CFLAGS=-O2",
    "CXXFLAGS=-O2",
    # libtool intercepts a plain -static; --static reaches the driver.
    "LDFLAGS=--static",
]

_BINUTILS_ARGS = [
    "--disable-nls",
    "--disable-werror",
    "--disable-gdb",
    "--disable-gdbserver",
    "--disable-sim",
    "--disable-gprofng",
    "--disable-shared",
    "--enable-static",
    "--disable-dependency-tracking",
]

# Host GCC (both stages): a native-CPU cross to the musl triplet, sysroot
# baked to its own output tree (valid in every sandbox, since actions all
# run at /execroot/_main; also relocatable because the sysroot equals the
# prefix). newlib/libgloss in the combined tree are ignored for a linux
# target; isl is skipped.
_HOST_GCC_ARGS = [
    "--enable-languages=c,c++",
    "--with-sysroot=%{OUT}",
    "--with-native-system-header-dir=/include",
    "--disable-shared",
    "--disable-nls",
    "--disable-multilib",
    "--disable-bootstrap",
    "--disable-libsanitizer",
    "--disable-libssp",
    "--disable-libgomp",
    "--without-isl",
    "--enable-checking=release",
    "--disable-dependency-tracking",
    "--disable-libstdcxx-pch",
]

# ---------------------------------------------------------------------------
# Stage 0: GNU make, bootstrapped without any pre-existing make.
# make is build tooling only — it never ends up in shipped artifacts — so
# it is the one component the prebuilt seed keeps compiling.
# ---------------------------------------------------------------------------

make_bootstrap(
    name = "make",
    configure = "@make_src//:configure",
    musl_gcc = ":musl_gcc",
    musl_toolchain = ":musl_files",
    srcs = "@make_src//:srcs",
)

# ---------------------------------------------------------------------------
# Stage 1: host toolchain compiled by the PREBUILT musl.cc seed.
# This is the only place the seed compiler is ever used (besides :make).
# ---------------------------------------------------------------------------

autotools_build(
    name = "host-binutils-s1",
    configure = "@binutils_src//:configure",
    configure_args = _BINUTILS_ARGS + _SEED_CC + _OPT_FLAGS + _MUSL_TARGET,
    make = ":make",
    musl_gcc = ":musl_gcc",
    musl_toolchain = ":musl_files",
    srcs = "@binutils_src//:srcs",
)

autotools_build(
    name = "musl-s1",
    configure = "@musl_src//:configure",
    configure_args = [
        "--disable-shared",
        "CC=gcc -static",
        "CFLAGS=-O2",
    ],
    make = ":make",
    musl_gcc = ":musl_gcc",
    musl_toolchain = ":musl_files",
    srcs = "@musl_src//:srcs",
)

autotools_build(
    name = "host-gcc-s1",
    configure = "@gcc_combined_src//:configure",
    configure_args = _HOST_GCC_ARGS + _SEED_CC + _OPT_FLAGS + _MUSL_TARGET,
    install_base = [
        ":host-binutils-s1",
        ":musl-s1",
    ],
    make = ":make",
    musl_gcc = ":musl_gcc",
    musl_toolchain = ":musl_files",
    srcs = "@gcc_combined_src//:srcs",
)

# ---------------------------------------------------------------------------
# Tooling rebuilt from source by stage 1: make and the GNU userland every
# later action runs on. These builds still use the prebuilt seed busybox
# as their shell (a shell cannot be built without a shell); from stage 2
# onward, no action has any prebuilt binary among its inputs.
#
# -std=gnu17 throughout: several of these packages bundle gnulib
# vintages with K&R declarations that GCC 15's C23 default rejects.
# ---------------------------------------------------------------------------

make_bootstrap(
    name = "make-s2",
    build_cc = select(
        {
            "@platforms//cpu:aarch64": "aarch64-unknown-linux-musl-gcc -static -std=gnu17",
            "@platforms//cpu:x86_64": "x86_64-unknown-linux-musl-gcc -static -std=gnu17",
        },
        no_match_error = _NO_MATCH,
    ),
    build_cxx = _STAGE_BUILD_CXX,
    configure = "@make_src//:configure",
    path_trees = [":host-gcc-s1"],
    srcs = "@make_src//:srcs",
    tool_subdir = _TOOL_SUBDIR,
)

_USERLAND_ARGS = [
    "--disable-nls",
    "--disable-dependency-tracking",
    "CFLAGS=-O2 -std=gnu17",
    "LDFLAGS=--static",
]

[
    autotools_build(
        name = name + "-s2",
        build_cc = _STAGE_BUILD_CC,
        build_cxx = _STAGE_BUILD_CXX,
        configure = "@" + name + "_src//:configure",
        configure_args = _USERLAND_ARGS + extra + _STAGE_CC_ONLY,
        make = ":make",
        path_trees = [":host-gcc-s1"],
        srcs = "@" + name + "_src//:srcs",
        tool_subdir = _TOOL_SUBDIR,
    )
    for name, extra in [
        # Internal malloc misbehaves on musl; Alpine disables it too.
        ("bash", ["--without-bash-malloc"]),
        ("coreutils", ["--enable-install-program=hostname"]),
        ("sed", []),
        ("grep", ["--disable-perl-regexp"]),
        ("findutils", []),
        ("diffutils", []),
        ("tar", []),
        ("gzip", []),
        ("gawk", ["--without-readline", "--without-mpfr"]),
    ]
]

# The complete from-source GNU userland: the shell and every utility the
# autotools flows exec, in one merged prefix.
tree_merge(
    name = "userland-s2",
    trees = [
        ":bash-s2",
        ":coreutils-s2",
        ":sed-s2",
        ":grep-s2",
        ":findutils-s2",
        ":diffutils-s2",
        ":tar-s2",
        ":gzip-s2",
        ":gawk-s2",
    ],
)

# ---------------------------------------------------------------------------
# Stage 2: the same host toolchain rebuilt by stage 1, running on the
# from-source GNU userland. No prebuilt binary is an input to these
# actions — the seed toolchain and seed busybox are absent.
# ---------------------------------------------------------------------------

autotools_build(
    name = "host-binutils-s2",
    build_cc = _STAGE_BUILD_CC,
    build_cxx = _STAGE_BUILD_CXX,
    configure = "@binutils_src//:configure",
    configure_args = _BINUTILS_ARGS + _OPT_FLAGS + _STAGE_CC + _MUSL_TARGET,
    make = ":make-s2",
    path_trees = [":host-gcc-s1"],
    srcs = "@binutils_src//:srcs",
    tool_subdir = _TOOL_SUBDIR,
    userland = ":userland-s2",
)

autotools_build(
    name = "musl-s2",
    build_cc = _STAGE_BUILD_CC,
    build_cxx = _STAGE_BUILD_CXX,
    configure = "@musl_src//:configure",
    configure_args = [
        "--disable-shared",
        "CFLAGS=-O2",
    ] + _STAGE_CC_ONLY,
    make = ":make-s2",
    path_trees = [":host-gcc-s1"],
    srcs = "@musl_src//:srcs",
    tool_subdir = _TOOL_SUBDIR,
    userland = ":userland-s2",
)

autotools_build(
    name = "host-gcc-s2",
    build_cc = _STAGE_BUILD_CC,
    build_cxx = _STAGE_BUILD_CXX,
    configure = "@gcc_combined_src//:configure",
    configure_args = _HOST_GCC_ARGS + _OPT_FLAGS + _STAGE_CC + _MUSL_TARGET,
    install_base = [
        ":host-binutils-s2",
        ":musl-s2",
    ],
    make = ":make-s2",
    path_trees = [":host-gcc-s1"],
    srcs = "@gcc_combined_src//:srcs",
    tool_subdir = _TOOL_SUBDIR,
    userland = ":userland-s2",
)

# ---------------------------------------------------------------------------
# macOS host support, part 1: the SDK-extraction toolchain. Apple's
# CLTools .pkg is a xar archive whose Payload is a pbzx-compressed cpio;
# bsdtar (libarchive) reads both the xar and the cpio, and pbzx.c is the
# ~90-line decoder in between, compiled in-action by stage 2. All built
# from pinned source like everything else at this tier.
# ---------------------------------------------------------------------------

# zlib's configure is hand-written (not autoconf): it takes --prefix and
# --static and reads CC from the environment, so it runs as a plain
# hermetic script instead of through autotools_build.
stage2_hermetic_run(
    name = "zlib-s2",
    files = {"@zlib_src//:configure": "CONFIGURE"},
    out_tree = True,
    path_trees = [":host-gcc-s2"],
    script = """export CC="$CC_FOR_BUILD" CFLAGS=-O2
"$CONFIG_SHELL" %{CONFIGURE} --prefix=%{OUT} --static
make -j %{JOBS}
make install
""",
    srcs = ["@zlib_src//:srcs"],
)

stage2_autotools_build(
    name = "xz-s2",
    configure = "@xz_src//:configure",
    configure_args = [
        "--disable-shared",
        "--enable-static",
        "--disable-nls",
        "--disable-xz",
        "--disable-xzdec",
        "--disable-lzmadec",
        "--disable-lzmainfo",
        "--disable-scripts",
        "--disable-doc",
        "--disable-dependency-tracking",
        "CFLAGS=-O2",
        "LDFLAGS=--static",
    ] + STAGE_CC,
    path_trees = [":host-gcc-s2"],
    srcs = "@xz_src//:srcs",
)

stage2_autotools_build(
    name = "libmd-s2",
    configure = "@libmd_src//:configure",
    configure_args = [
        "--disable-shared",
        "--enable-static",
        "--disable-dependency-tracking",
        "CFLAGS=-O2",
        "LDFLAGS=--static",
    ] + STAGE_CC,
    path_trees = [":host-gcc-s2"],
    srcs = "@libmd_src//:srcs",
)

stage2_autotools_build(
    name = "expat-s2",
    configure = "@expat_src//:configure",
    configure_args = [
        "--disable-shared",
        "--enable-static",
        "--disable-dependency-tracking",
        "--without-docbook",
        "--without-examples",
        "--without-tests",
        "--without-xmlwf",
        "CFLAGS=-O2",
        "LDFLAGS=--static",
    ] + STAGE_CC,
    path_trees = [":host-gcc-s2"],
    srcs = "@expat_src//:srcs",
)

stage2_autotools_build(
    name = "libarchive-s2",
    configure = "@libarchive_src//:configure",
    configure_args = [
        "--disable-shared",
        "--enable-static",
        "--disable-dependency-tracking",
        "--disable-bsdcat",
        "--disable-bsdcpio",
        "--disable-bsdunzip",
        "--disable-acl",
        "--disable-xattr",
        "--without-bz2lib",
        "--without-libb2",
        "--without-iconv",
        "--without-lz4",
        "--without-zstd",
        "--without-openssl",
        "--without-xml2",
        # xar's XML table of contents needs a parser; expat is the small one.
        "--with-expat",
        "CFLAGS=-O2",
        # zlib + liblzma + expat come from the trees copied into this prefix.
        "CPPFLAGS=-I%{OUT}/include",
        "LDFLAGS=--static -L%{OUT}/lib",
    ] + STAGE_CC,
    install_base = [
        ":expat-s2",
        ":libmd-s2",
        ":zlib-s2",
        ":xz-s2",
    ],
    path_trees = [":host-gcc-s2"],
    srcs = "@libarchive_src//:srcs",
)

# The extracted SDK: headers and .tbd linker stubs only. sdkprune deletes
# the few Mach-O leftovers each release carries (pre-10.8 CRT startup
# objects, Tcl/Tk stub archives, stray framework executables) by file
# magic, so no prebuilt binary survives into the action inputs of
# anything that links against this tree. None of the pruned files
# participates in a macos11+ link.
stage2_hermetic_run(
    name = "macos-sdk",
    files = {
        ":libarchive-s2": "LIBARCHIVE",
        ":pbzx.c": "PBZX_C",
        ":sdkprune.c": "SDKPRUNE_C",
        "@macos_sdk_pkg//file": "PKG",
    },
    out_tree = True,
    path_trees = [
        ":libarchive-s2",
        ":host-gcc-s2",
    ],
    script = """$CC_FOR_BUILD -O2 -o pbzx %{PBZX_C} -I%{LIBARCHIVE}/include -L%{LIBARCHIVE}/lib -llzma
$CC_FOR_BUILD -O2 -o sdkprune %{SDKPRUNE_C}
bsdtar -xf %{PKG}
./pbzx Payload payload.cpio
mkdir tree
bsdtar -xf payload.cpio -C tree
sdk=$(find tree/Library/Developer/CommandLineTools/SDKs -mindepth 1 -maxdepth 1 -type d -name 'MacOSX*.sdk' | head -1)
if [ -z "$sdk" ]; then
    echo "no SDK directory found in the pkg payload" >&2
    exit 1
fi
./sdkprune "$sdk"
# Pruning leaves framework-internal symlinks to the deleted archives
# dangling; Bazel (rightly) rejects dangling links in tree artifacts.
find "$sdk" -xtype l -delete
# Bazel's tree-artifact walker follows directory symlinks, so cyclic
# links (Ruby.framework's Headers/ruby self-reference, the same species
# as musl.cc's `usr -> .`) must go: delete any symlink whose resolved
# target is an ancestor of the link itself.
find "$sdk" -type l | while IFS= read -r l; do
    t=$(readlink -f "$l") || { rm -f "$l"; continue; }
    parent=$(readlink -f "$(dirname "$l")")
    case "$parent/" in
        "$t"/*) rm -f "$l" ;;
    esac
done
cp -a "$sdk"/. %{OUT}/
""",
)

# ---------------------------------------------------------------------------
# macOS host support, part 2: build tooling for //tools/clang. cmake
# self-bootstraps with only a C++ compiler and make; CPython is the build
# interpreter LLVM's cmake requires. Both static, both stage-2 tier.
# ---------------------------------------------------------------------------

# cmake's `configure` wrapper execs its bootstrap script. The phase-1
# bootstrap cmake runs *inside this action*, so it must be static too
# (LDFLAGS); the final cmake gets -static via CMAKE_EXE_LINKER_FLAGS.
stage2_hermetic_run(
    name = "cmake-s2",
    files = {"@cmake_src//:configure": "CONFIGURE"},
    out_tree = True,
    path_trees = [":host-gcc-s2"],
    script = """mkdir -p "$SCRATCH/cmake-bootstrap-include/linux"
: > "$SCRATCH/cmake-bootstrap-include/linux/fs.h"
export CXXFLAGS="${CXXFLAGS-}${CXXFLAGS:+ }-idirafter $SCRATCH/cmake-bootstrap-include"
export CC="$CC_FOR_BUILD" CXX="$CXX_FOR_BUILD" LDFLAGS=-static
"$CONFIG_SHELL" %{CONFIGURE} --prefix=%{OUT} --parallel=%{JOBS} -- \
    -DCMAKE_BUILD_TYPE=Release \
    -DCMAKE_USE_OPENSSL=OFF \
    -DBUILD_TESTING=OFF \
    -DCMAKE_EXE_LINKER_FLAGS=-static
make -j %{JOBS}
make install
""",
    srcs = ["@cmake_src//:srcs"],
)

# Static CPython: LINKFORSHARED defaults to -export-dynamic, which is
# meaningless under -static, so it is blanked on the make command line
# (the top-level configure does not forward make variables).
stage2_autotools_build(
    name = "python-s2",
    configure = "@python_src//:configure",
    configure_args = [
        "--disable-shared",
        "--without-ensurepip",
        "--disable-test-modules",
        "--without-readline",
        "--disable-dependency-tracking",
        "ac_cv_func_dlopen=no",
        "MODULE_BUILDTYPE=static",
        "CFLAGS=-O2",
        "CPPFLAGS=-I%{OUT}/include",
        "LDFLAGS=--static -L%{OUT}/lib",
    ] + STAGE_CC,
    install_base = [":zlib-s2"],
    install_targets = "LINKFORSHARED=' ' install",
    make_targets = "LINKFORSHARED=' '",
    path_trees = [":host-gcc-s2"],
    srcs = "@python_src//:srcs",
)
