# Darwin-hosted clang + lld 22.1.8 examples, Canadian-crossed with the
# reusable Linux-native //trees:clang and the pruned
# //trees:macos-sdk. No Mach-O output executes during these builds.

load("//:defs.bzl", "stage2_dist_tarball", "stage2_run")

package(default_visibility = ["//examples:__subpackages__"])

# arm64-Darwin-hosted clang + lld, Canadian-crossed entirely inside the
# Linux sandbox. //trees:clang is both the build->host compiler/tool
# suite and the source of native TableGen executables.
stage2_run(
    name = "clang-darwin-arm64",
    extra_inputs = ["@llvm_src//:srcs"],
    inputs = {
        "HOST_LLVM": "//trees:clang",
        "LLVM_CML": "@llvm_src//:llvm/CMakeLists.txt",
        "PYTHON": "//trees:python",
        "SDK": "//trees:macos-sdk",
    },
    out_tree = True,
    path_trees = [
        "//trees:clang",
        "//trees:cmake",
        "//trees:python",
    ],
    script = """llvmdir=$(dirname %{LLVM_CML})
hostllvm=%{HOST_LLVM}
sdk=%{SDK}
export PATH="$hostllvm/bin:$PATH"
cmake -S "$llvmdir" -B b \
    -DCMAKE_BUILD_TYPE=Release \
    -DCMAKE_INSTALL_PREFIX=%{OUT} \
    -DCMAKE_MAKE_PROGRAM=make \
    -DCMAKE_SYSTEM_NAME=Darwin \
    -DCMAKE_SYSTEM_VERSION=11.0 \
    -DCMAKE_SYSTEM_PROCESSOR=arm64 \
    -DCMAKE_OSX_ARCHITECTURES=arm64 \
    -DCMAKE_OSX_DEPLOYMENT_TARGET=11.0 \
    -DCMAKE_OSX_SYSROOT="$sdk" \
    -DCMAKE_FIND_ROOT_PATH="$sdk" \
    -DCMAKE_FIND_ROOT_PATH_MODE_PROGRAM=NEVER \
    -DCMAKE_FIND_ROOT_PATH_MODE_LIBRARY=ONLY \
    -DCMAKE_FIND_ROOT_PATH_MODE_INCLUDE=ONLY \
    -DCMAKE_C_COMPILER="$hostllvm/bin/clang" \
    -DCMAKE_CXX_COMPILER="$hostllvm/bin/clang++" \
    -DCMAKE_C_COMPILER_TARGET=arm64-apple-macos11 \
    -DCMAKE_CXX_COMPILER_TARGET=arm64-apple-macos11 \
    -DCMAKE_AR="$hostllvm/bin/llvm-ar" \
    -DCMAKE_RANLIB="$hostllvm/bin/llvm-ranlib" \
    -DCMAKE_NM="$hostllvm/bin/llvm-nm" \
    -DCMAKE_OBJCOPY="$hostllvm/bin/llvm-objcopy" \
    -DCMAKE_STRIP="$hostllvm/bin/llvm-strip" \
    -DCMAKE_LINKER="$hostllvm/bin/ld64.lld" \
    -DCMAKE_LIBTOOL="$hostllvm/bin/llvm-libtool-darwin" \
    -DCMAKE_INSTALL_NAME_TOOL="$hostllvm/bin/llvm-install-name-tool" \
    -DCMAKE_EXE_LINKER_FLAGS=-fuse-ld=lld \
    -DCMAKE_SHARED_LINKER_FLAGS=-fuse-ld=lld \
    -DCMAKE_MODULE_LINKER_FLAGS=-fuse-ld=lld \
    -DCMAKE_SKIP_RPATH=ON \
    '-DLLVM_ENABLE_PROJECTS=clang;lld' \
    '-DLLVM_TARGETS_TO_BUILD=AArch64;ARM;RISCV;X86' \
    -DLLVM_HOST_TRIPLE=arm64-apple-macos11 \
    -DLLVM_DEFAULT_TARGET_TRIPLE=arm64-apple-macos11 \
    -DLLVM_TABLEGEN="$hostllvm/bin/llvm-tblgen" \
    -DCLANG_TABLEGEN="$hostllvm/bin/clang-tblgen" \
    -DLLVM_ENABLE_ZLIB=OFF \
    -DLLVM_ENABLE_ZSTD=OFF \
    -DLLVM_ENABLE_LIBXML2=OFF \
    -DLLVM_ENABLE_LIBEDIT=OFF \
    -DLLVM_ENABLE_TERMINFO=OFF \
    -DLLVM_ENABLE_BINDINGS=OFF \
    -DLLVM_INCLUDE_TESTS=OFF \
    -DLLVM_INCLUDE_EXAMPLES=OFF \
    -DLLVM_INCLUDE_BENCHMARKS=OFF \
    -DLLVM_INCLUDE_DOCS=OFF \
    -DCLANG_ENABLE_STATIC_ANALYZER=OFF \
    -DPython3_EXECUTABLE=%{PYTHON}/bin/python3
make -C b -j %{JOBS} clang lld llvm-ar llvm-nm llvm-objcopy llvm-strip \
    llvm-libtool-darwin llvm-install-name-tool || \
    make -C b -j 1 clang lld llvm-ar llvm-nm llvm-objcopy llvm-strip \
        llvm-libtool-darwin llvm-install-name-tool
make -C b install-clang install-clang-resource-headers install-lld \
    install-llvm-ar install-llvm-ranlib install-llvm-nm install-llvm-strip \
    install-llvm-objcopy install-llvm-libtool-darwin \
    install-llvm-install-name-tool
magic=$(od -An -tx1 -N4 %{OUT}/bin/clang | tr -d ' \\n')
if [ "$magic" != "cffaedfe" ]; then
    echo "installed clang is not an arm64 Mach-O executable (magic: $magic)" >&2
    exit 1
fi
""",
)

stage2_dist_tarball(
    name = "clang-darwin-arm64-dist",
    out = "clang-darwin-arm64.tar.gz",
    tree = ":clang-darwin-arm64",
)

# x86_64-Darwin-hosted clang + lld, Canadian-crossed entirely inside the
# Linux sandbox. //trees:clang is both the build->host compiler/tool
# suite and the source of native TableGen executables.
stage2_run(
    name = "clang-darwin-x86_64",
    extra_inputs = ["@llvm_src//:srcs"],
    inputs = {
        "HOST_LLVM": "//trees:clang",
        "LLVM_CML": "@llvm_src//:llvm/CMakeLists.txt",
        "PYTHON": "//trees:python",
        "SDK": "//trees:macos-sdk",
    },
    out_tree = True,
    path_trees = [
        "//trees:clang",
        "//trees:cmake",
        "//trees:python",
    ],
    script = """llvmdir=$(dirname %{LLVM_CML})
hostllvm=%{HOST_LLVM}
sdk=%{SDK}
export PATH="$hostllvm/bin:$PATH"
cmake -S "$llvmdir" -B b \
    -DCMAKE_BUILD_TYPE=Release \
    -DCMAKE_INSTALL_PREFIX=%{OUT} \
    -DCMAKE_MAKE_PROGRAM=make \
    -DCMAKE_SYSTEM_NAME=Darwin \
    -DCMAKE_SYSTEM_VERSION=11.0 \
    -DCMAKE_SYSTEM_PROCESSOR=x86_64 \
    -DCMAKE_OSX_ARCHITECTURES=x86_64 \
    -DCMAKE_OSX_DEPLOYMENT_TARGET=11.0 \
    -DCMAKE_OSX_SYSROOT="$sdk" \
    -DCMAKE_FIND_ROOT_PATH="$sdk" \
    -DCMAKE_FIND_ROOT_PATH_MODE_PROGRAM=NEVER \
    -DCMAKE_FIND_ROOT_PATH_MODE_LIBRARY=ONLY \
    -DCMAKE_FIND_ROOT_PATH_MODE_INCLUDE=ONLY \
    -DCMAKE_C_COMPILER="$hostllvm/bin/clang" \
    -DCMAKE_CXX_COMPILER="$hostllvm/bin/clang++" \
    -DCMAKE_C_COMPILER_TARGET=x86_64-apple-macos11 \
    -DCMAKE_CXX_COMPILER_TARGET=x86_64-apple-macos11 \
    -DCMAKE_AR="$hostllvm/bin/llvm-ar" \
    -DCMAKE_RANLIB="$hostllvm/bin/llvm-ranlib" \
    -DCMAKE_NM="$hostllvm/bin/llvm-nm" \
    -DCMAKE_OBJCOPY="$hostllvm/bin/llvm-objcopy" \
    -DCMAKE_STRIP="$hostllvm/bin/llvm-strip" \
    -DCMAKE_LINKER="$hostllvm/bin/ld64.lld" \
    -DCMAKE_LIBTOOL="$hostllvm/bin/llvm-libtool-darwin" \
    -DCMAKE_INSTALL_NAME_TOOL="$hostllvm/bin/llvm-install-name-tool" \
    -DCMAKE_EXE_LINKER_FLAGS=-fuse-ld=lld \
    -DCMAKE_SHARED_LINKER_FLAGS=-fuse-ld=lld \
    -DCMAKE_MODULE_LINKER_FLAGS=-fuse-ld=lld \
    -DCMAKE_SKIP_RPATH=ON \
    '-DLLVM_ENABLE_PROJECTS=clang;lld' \
    '-DLLVM_TARGETS_TO_BUILD=AArch64;ARM;RISCV;X86' \
    -DLLVM_HOST_TRIPLE=x86_64-apple-macos11 \
    -DLLVM_DEFAULT_TARGET_TRIPLE=x86_64-apple-macos11 \
    -DLLVM_DISABLE_ASSEMBLY_FILES=ON \
    -DLLVM_TABLEGEN="$hostllvm/bin/llvm-tblgen" \
    -DCLANG_TABLEGEN="$hostllvm/bin/clang-tblgen" \
    -DLLVM_ENABLE_ZLIB=OFF \
    -DLLVM_ENABLE_ZSTD=OFF \
    -DLLVM_ENABLE_LIBXML2=OFF \
    -DLLVM_ENABLE_LIBEDIT=OFF \
    -DLLVM_ENABLE_TERMINFO=OFF \
    -DLLVM_ENABLE_BINDINGS=OFF \
    -DLLVM_INCLUDE_TESTS=OFF \
    -DLLVM_INCLUDE_EXAMPLES=OFF \
    -DLLVM_INCLUDE_BENCHMARKS=OFF \
    -DLLVM_INCLUDE_DOCS=OFF \
    -DCLANG_ENABLE_STATIC_ANALYZER=OFF \
    -DPython3_EXECUTABLE=%{PYTHON}/bin/python3
make -C b -j %{JOBS} clang lld llvm-ar llvm-nm llvm-objcopy llvm-strip \
    llvm-libtool-darwin llvm-install-name-tool || \
    make -C b -j 1 clang lld llvm-ar llvm-nm llvm-objcopy llvm-strip \
        llvm-libtool-darwin llvm-install-name-tool
make -C b install-clang install-clang-resource-headers install-lld \
    install-llvm-ar install-llvm-ranlib install-llvm-nm install-llvm-strip \
    install-llvm-objcopy install-llvm-libtool-darwin \
    install-llvm-install-name-tool
header=$(od -An -tx1 -N8 %{OUT}/bin/clang | tr -d ' \n')
if [ "$header" != "cffaedfe07000001" ]; then
    echo "installed clang is not an x86_64 Mach-O executable (header: $header)" >&2
    exit 1
fi
""",
)

stage2_dist_tarball(
    name = "clang-darwin-x86_64-dist",
    out = "clang-darwin-x86_64.tar.gz",
    tree = ":clang-darwin-x86_64",
)
