# Example GNU x86_64-w64-mingw32 (Windows) cross toolchain: GCC 15.2.0 +
# binutils 2.45 + mingw-w64 v12 (UCRT).
#
# Unlike the newlib targets, mingw needs the classic multi-step dance:
# the Windows headers install before any compiler exists, a C-only gcc
# (make all-gcc) builds just the driver+cc1, that compiler builds the
# mingw-w64 CRT, and only then can a full gcc build its target libraries
# against the CRT. Narrowed: --enable-threads=win32 (no winpthreads, so
# no std::thread in libstdc++), C/C++ only, no multilib.

load(
    "//:defs.bzl",
    "BINUTILS_ARGS",
    "OPT_FLAGS",
    "stage2_autotools_build",
    "stage2_dist_tarball",
)

package(default_visibility = ["//examples:__subpackages__"])

_TARGET = "x86_64-w64-mingw32"

stage2_autotools_build(
    name = "mingw-binutils",
    srcs = "@binutils_src//:srcs",
    configure = "@binutils_src//:configure",
    configure_args = ["--target=" + _TARGET] + BINUTILS_ARGS + OPT_FLAGS,
)

# Windows API headers: installable before any compiler exists. Installed
# under <prefix>/x86_64-w64-mingw32 — gcc finds target headers and libs
# in $prefix/$target automatically, no sysroot needed.
stage2_autotools_build(
    name = "mingw-headers",
    srcs = "@mingw_w64_src//:srcs",
    configure = "@mingw_w64_src//:mingw-w64-headers/configure",
    configure_args = [
        "--host=" + _TARGET,
        "--with-default-msvcrt=ucrt",
    ],
    prefix_subdir = _TARGET,
    stage_cc = False,
)

# C-only gcc, built and installed only as far as the compiler proper
# (all-gcc/install-gcc): enough to compile the CRT, no target libraries.
stage2_autotools_build(
    name = "mingw-gcc-stage1",
    srcs = "@gcc_combined_src//:srcs",
    configure = "@gcc_combined_src//:configure",
    configure_args = [
        "--target=" + _TARGET,
        "--enable-languages=c",
        "--enable-threads=win32",
        "--disable-shared",
        "--disable-nls",
        "--disable-multilib",
        "--enable-checking=release",
        "--disable-dependency-tracking",
    ] + OPT_FLAGS,
    install_base = [
        ":mingw-binutils",
        ":mingw-headers",
    ],
    install_targets = "install-gcc",
    make_targets = "all-gcc",
)

# The mingw-w64 C runtime, compiled by the stage-1 cross gcc (which
# carries binutils and the headers in its own merged prefix).
stage2_autotools_build(
    name = "mingw-crt",
    srcs = "@mingw_w64_src//:srcs",
    configure = "@mingw_w64_src//:mingw-w64-crt/configure",
    configure_args = [
        "--host=" + _TARGET,
        "--with-default-msvcrt=ucrt",
    ],
    path_trees = [":mingw-gcc-stage1"],
    prefix_subdir = _TARGET,
    stage_cc = False,
)

# Full C/C++ gcc: with headers + CRT present in the prefix, a single
# fresh configure/make builds compiler and target libraries in order.
stage2_autotools_build(
    name = "mingw-w64-gcc",
    srcs = "@gcc_combined_src//:srcs",
    configure = "@gcc_combined_src//:configure",
    configure_args = [
        "--target=" + _TARGET,
        "--enable-languages=c,c++",
        "--enable-threads=win32",
        "--disable-shared",
        "--disable-nls",
        "--disable-multilib",
        "--disable-libssp",
        "--disable-libgomp",
        "--disable-libquadmath",
        "--enable-checking=release",
        "--disable-dependency-tracking",
        "--disable-libstdcxx-pch",
    ] + OPT_FLAGS,
    install_base = [
        ":mingw-binutils",
        ":mingw-headers",
        ":mingw-crt",
    ],
)

stage2_dist_tarball(
    name = "dist",
    out = "mingw-w64-gcc-15.2.0.tar.gz",
    tree = ":mingw-w64-gcc",
)
